AWS-RDS/main.tf
provider "aws" {
  region = var.region
}

# Subnet group for RDS
resource "aws_db_subnet_group" "rds_subnet_group" {
  name       = "rds_subnet_group"
  subnet_ids = [
    "aws_subnet.subnet1 , aws_subnet.subnet2"
  ]

  tags = {
    Name = "rds_subnet_group"
  }
}

# RDS instance
resource "aws_db_instance" "default" {
  allocated_storage      = var.allocated_storage
  engine                 = var.db_engine
  engine_version         = var.db_engine_version
  instance_class         = var.db_instance_class
  db_name                = var.db_name
  username               = var.db_username
  password               = var.db_password
  parameter_group_name   = "default.${var.db_engine}${var.db_engine_pggroup}"  
  db_subnet_group_name   = aws_db_subnet_group.rds_subnet_group.name
  vpc_security_group_ids = [
    aws_security_group.sg.id
  ]

  # Backup and maintenance settings
  backup_retention_period = var.db_backup_retention_period
  backup_window           = var.db_backup_window
  maintenance_window      = var.db_maintenance_window

  skip_final_snapshot = true  

  tags = {
    Name = "terraform-rds-instance"
  }
}

# Security Group

resource "aws_security_group" "sg" {
  name = "terra-sg"
  vpc_id = aws_vpc.vpc.id

  ingress {
      from_port = var.ports
      to_port = var.ports
      protocol = "tcp"
      cidr_blocks = ["0.0.0.0/0"]
    }
  egress {
    from_port = 0
    to_port = 0
    protocol = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# VPC
resource "aws_vpc" "vpc" {
  cidr_block = "192.168.0.0/16"
  tags = {
    Name = "terra-vpc"
  }
}

resource "aws_subnet" "subnet1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "192.168.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "ap-south-1a"
  tags = {
    Name = "pub-1"
  }
}

resource "aws_subnet" "subnet2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "192.168.2.0/24"
  map_public_ip_on_launch = true
  availability_zone = "ap-south-1b"
  tags = {
    Name = "pub-2"
  }
}

resource "aws_subnet" "pvt-subnet1" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "192.168.3.0/24"
  availability_zone = "ap-south-1a"
  tags = {
    Name = "pvt-1"
  }
}

resource "aws_subnet" "pvt-subnet2" {
  vpc_id = aws_vpc.vpc.id
  cidr_block = "192.168.4.0/24"
  availability_zone = "ap-south-1b"
  tags = {
    Name = "pvt-2"
  }
}

resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "terra-igw"
  }
}

resource "aws_eip" "eip" {
  domain = "vpc"
}

resource "aws_nat_gateway" "nat-igw" {
  allocation_id = aws_eip.eip.id
  subnet_id = aws_subnet.subnet1.id
  tags = {
    Name = "terra-nat-igw"
  }
}

resource "aws_route_table" "rt" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "terra-rt"
  }
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table_association" "rt1" {
  route_table_id = aws_route_table.rt.id
  subnet_id = aws_subnet.subnet1.id
}

resource "aws_route_table_association" "rt2" {
  route_table_id = aws_route_table.rt.id
  subnet_id = aws_subnet.subnet2.id
}

resource "aws_route_table" "pvt-rt" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "terra-pvt-rt"
  }
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.nat-igw.id
  }
}

resource "aws_route_table_association" "pvt-rt1" {
  route_table_id = aws_route_table.pvt-rt.id
  subnet_id = aws_subnet.pvt-subnet1.id
}

resource "aws_route_table_association" "pvt-rt2" {
  route_table_id = aws_route_table.pvt-rt.id
  subnet_id = aws_subnet.pvt-subnet2.id
}
